--- a/iletişim.html
+++ b/iletişim.html
@@ -1,15 +1,17 @@
 <html>
     <head>
         <title>İletişim - Ankara Bilim Üniversitesi</title>
-        </head>
-        <body>
-            <div>
-                <a href="index.html">Ana Sayfa</a>
-                <a href="hakkımızda.html">hakkımızda</a>
-                <a href="iletişim.html">İletişim</a>
-            </div>
-            <h1>Ankara Bilim Üniversitesi</h1>
-            <p>Telefon Numarası: 031200000000</p>
-            <p>Email Adresi: info@ankarabilim.edu.tr</p>
-        </body>
-</html>          
+        <link rel="stylesheet" href="stsyles.css">
+    </head>
+    <body>
+        <div>
+            <a href="index.html">Ana Sayfa</a>
+            <a href="hakkımızda.html">Hakkımızda</a>
+            <a href="iletişim.html">İletişim</a>
+        </div>
+        <h1>Ankara Bilim Üniversitesi</h1>
+        <p>Telefon Numarası:0312000000</p>
+        <p>Email Adresi: info@ankarabilim.edu.tr</p>
+    </body>
+</html>   
+              
