--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -1,14 +1,15 @@
 <html>
     <head>
-        <title>Ankara Bilim Üniversitesi</title>
-        </head>
-        <body>
-            <div>
-                <a href="index.html">Ana Sayfa</a>
-                <a href="hakkımızda.html">hakkımızda</a>
-                <a href="iletişim.html">İletişim</a>
-            </div>
-            <h1>Ankara Bilim Üniversitesi</h1>
-            <p>Maltepe Kmpüsündeyiz</p>
-        </body>
-</html>        
+        <title>Hakkımızda - Ankara Bilim Üniversitesi</title>
+        <link rel="stylesheet" href="stsyles.css">
+    </head>
+    <body>
+        <div>
+            <a href="index.html">Ana Sayfa</a>
+            <a href="hakkımızda.html">Hakkımızda</a>
+            <a href="iletişim.html">İletişim</a>
+        </div>
+        <h1>Ankara Bilim Üniversitesi</h1>
+        <p>Maltepe Kampüsündeyiz</p>
+    </body>
+</html>   
