--- a/görsel.html
+++ b/görsel.html
@@ -4,13 +4,13 @@
         <link rel="stylesheet" href="stsyles.css">
         <style>
             #gallery {
-                display: flex;
+               
                 flex-wrap: wrap;
                 gap: 20px;
             }
 
             #gallery-img {
-                width: 45%;
+                width: 30%;
             }
 
             #gallery-popup {
@@ -25,7 +25,7 @@
                 background: #000;
             }
             #gallery-popup img {
-                width: 100%;
+                width: 50%;
             }
             #gallery-popup-close {
                 position: absolute;
@@ -49,14 +49,14 @@
     </div>
     <h1>Ankara Bilim Üniversitesi Sayfası</h1>
 
-    <div id="gallery">
+    <div id="gallery-popup">
         <img src="https://ankarabilim.edu.tr/assets/images/anasayfa-banner/hazirlik-okulu.jpg?v=2" class="active" alt="">
             <img src="https://ankarabilim.edu.tr/assets/images/anasayfa-banner/meslekyuksekokulu.jpg?v=2" alt="">
             <img src="https://ankarabilim.edu.tr/assets/images/anasayfa-banner/fakulteler.jpg?v=2" alt="">
             <img src="https://ankarabilim.edu.tr/assets/images/anasayfa-banner/lisansustu.jpg?v=2" alt="">
     </div>
-    <div id="gallery-popup">
-        <img src="https://ankarabilim.edu.tr/assets/images/anasayfa-banner/fakulteler.jpg?v=2" aşt="">
+    <div id="gallery">
+        <img src="https://ankarabilim.edu.tr/assets/drop/dropimg_5f8d646f0e3e7dbeb8adc083c7f6f5f9e731035c2991c5516d7210ba8619dcf141347d71.JPG"> alt="">
 
         <button id="gallery-popup-close">X</button> 
     </div>
